openshift/deploy/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view
    component: redis
  name: kube-ops-view-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view
      component: redis
  template:
    metadata:
      labels:
        application: kube-ops-view
        component: redis
    spec:
      tolerations:
        - key: node-role.kubernetes.io/infra
          operator: Exists
          effect: NoSchedule
      containers:
        - name: redis
          image: image-registry.openshift-image-registry.svc:5000/openshift/redis:7-el9
          ports:
            - containerPort: 6379
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 6379
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: redis-data
              mountPath: /var/lib/redis/data
      volumes:
        - name: redis-data
          emptyDir: {}
