openshift/deploy/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-ops-view
    component: redis
  name: kube-ops-view-redis
spec:
  selector:
    application: kube-ops-view
    component: redis
  type: ClusterIP
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
