openshift/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: ocp-ops-view-tls
  labels:
    application: kube-ops-view
    component: frontend
  name: ocp-ops-view
spec:
  selector:
    application: kube-ops-view
    component: frontend
  type: ClusterIP
  ports:
    - name: https
      port: 8443
      targetPort: 8443
