openshift/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-ops-view
spec:
  host: ocp-ops-view.apps.<cluster.domain>
  port:
    targetPort: https
  to:
    kind: Service
    name: ocp-ops-view
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
